<resources>
    <string name="app_name">Salário do Mes</string>
    <string name="nomeFuncionario">Nome do Funcionário</string>
    <string name="valorHorasTrabalhadas">Valor da Hora Trabalhada</string>
    <string name="qtdDiasTrabalhados">Qtd. de Dias Trabalhados</string>
    <string name="qtdHorasDias">Qtd. Horas Dias</string>
    <string name="calcular">Calcular</string>
    <string name="salarioBruto">Salário Bruto: </string>
    <string name="descINSS">Desc. INSS: </string>
    <string name="descFGTS">Desc. FGTS: </string>
    <string name="salarioLiquido">Salário Líquido: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>